; ModuleID = '/home/carl/AnghaBench/memcached/extr_logger.c_logger_thread_sum_stats.c'
source_filename = "/home/carl/AnghaBench/memcached/extr_logger.c_logger_thread_sum_stats.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32, i32, i32 }
%struct.logger_stats = type { i64, i64, i64, i64 }

@stats = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.logger_stats*)* @logger_thread_sum_stats to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @logger_thread_sum_stats(%struct.logger_stats* %0) #0 {
  %2 = alloca %struct.logger_stats*, align 8
  store %struct.logger_stats* %0, %struct.logger_stats** %2, align 8
  %3 = call i32 (...) @STATS_LOCK()
  %4 = load %struct.logger_stats*, %struct.logger_stats** %2, align 8
  %5 = getelementptr inbounds %struct.logger_stats, %struct.logger_stats* %4, i32 0, i32 3
  %6 = load i64, i64* %5, align 8
  %7 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @stats, i32 0, i32 3), align 4
  %8 = sext i32 %7 to i64
  %9 = add nsw i64 %8, %6
  %10 = trunc i64 %9 to i32
  store i32 %10, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @stats, i32 0, i32 3), align 4
  %11 = load %struct.logger_stats*, %struct.logger_stats** %2, align 8
  %12 = getelementptr inbounds %struct.logger_stats, %struct.logger_stats* %11, i32 0, i32 2
  %13 = load i64, i64* %12, align 8
  %14 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @stats, i32 0, i32 2), align 4
  %15 = sext i32 %14 to i64
  %16 = add nsw i64 %15, %13
  %17 = trunc i64 %16 to i32
  store i32 %17, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @stats, i32 0, i32 2), align 4
  %18 = load %struct.logger_stats*, %struct.logger_stats** %2, align 8
  %19 = getelementptr inbounds %struct.logger_stats, %struct.logger_stats* %18, i32 0, i32 1
  %20 = load i64, i64* %19, align 8
  %21 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @stats, i32 0, i32 1), align 4
  %22 = sext i32 %21 to i64
  %23 = add nsw i64 %22, %20
  %24 = trunc i64 %23 to i32
  store i32 %24, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @stats, i32 0, i32 1), align 4
  %25 = load %struct.logger_stats*, %struct.logger_stats** %2, align 8
  %26 = getelementptr inbounds %struct.logger_stats, %struct.logger_stats* %25, i32 0, i32 0
  %27 = load i64, i64* %26, align 8
  %28 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @stats, i32 0, i32 0), align 4
  %29 = sext i32 %28 to i64
  %30 = add nsw i64 %29, %27
  %31 = trunc i64 %30 to i32
  store i32 %31, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @stats, i32 0, i32 0), align 4
  %32 = call i32 (...) @STATS_UNLOCK()
  ret void
}

declare dso_local i32 @STATS_LOCK(...) #1

declare dso_local i32 @STATS_UNLOCK(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
